--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,13 @@
 [buildout]
 develop = .
 parts = test
+versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.renderer [test]
+eggs = zope.renderer [test]
+
+[versions]
+zope.publisher = 4.0.0a2
+zope.security = 4.0.0a5
+zope.traversing = 4.0.0a2
