Update to latest bootstrap.py
Downloaded from https://bootstrap.pypa.io/bootstrap-buildout.py

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,6 @@ recipe = zc.recipe.testrunner
 eggs = zope.renderer [test]
 
 [versions]
-zope.publisher = 4.0.0a2
-zope.security = 4.0.0a5
-zope.traversing = 4.0.0a2
+zope.publisher = >=4.0.0a2
+zope.security = >=4.0.0a5
+zope.traversing = >=4.0.0a2
