Configuring for pure-python

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
+*.egg-info/
+*.profraw
 *.pyc
-__pycache__
-src/*.egg-info
-benchmark/*.egg-info
-
+*.pyo
+.coverage
+.coverage.*
+.eggs/
 .installed.cfg
-.tox
-bin
-develop-eggs
-docs
-parts
+.mr.developer.cfg
+.tox/
+__pycache__/
+bin/
+build/
+coverage.xml
+develop-eggs/
+dist/
+docs/_build
+eggs/
+lib/
+lib64
+parts/
+pyvenv.cfg
